replaced the Pair class with 'Prop'. (reasoning: the Pair class was only used to represent the properties of a prop.)